fixed icon overlap bug; included edit link

--- a/pylowiki/public/styles/civ.css
+++ b/pylowiki/public/styles/civ.css
@@ -580,7 +580,7 @@ padding: 0;
     margin-left:5px;
 }
 
-.green-tag, .Outdoors, .Land, .Environment, .Animals, .Parks_and_Rec{
+.green-tag, .Outdoors, .Land, .Environment, .Animals{
     background-color: #075D00;
 }
 .orange-tag, .Arts, .Entertainment, .Sports, .Community, .Other{
@@ -3565,5 +3565,9 @@ svg{
 
 .following-spinner{
     height: 100px;
+}
+
+.title-cell{
+    padding-right: 10px;
 }
 
